--- a/app/src/main/res/layout/id_list_item.xml
+++ b/app/src/main/res/layout/id_list_item.xml
@@ -20,6 +20,13 @@
         android:layout_height="wrap_content" />
 
     <ImageButton
+        android:contentDescription="Share item"
+        android:id="@+id/id_listitem_share"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_share" />
+    <ImageButton
         android:contentDescription="Show item"
         android:id="@+id/id_listitem_show"
         android:layout_width="0dp"
