--- a/app/src/main/res/layout/vault_list_layout.xml
+++ b/app/src/main/res/layout/vault_list_layout.xml
@@ -24,6 +24,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Share"
+            android:textColor="#ff4d00"
+            android:textSize="15sp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Show"
             android:textColor="#ff4d00"
             android:textSize="15sp"
