Added back save/load into SharedPreferences (only IP address now)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content"
         android:inputType="phone" />
 
+    <Button
+        android:text="Save IP"
+        android:onClick="saveValues"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
