Bugfix: on some devices, when power saver mode is active, the native process hangs until MainActivity is launched (used helper activity to overcome this)

--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -6,7 +6,7 @@
         <ImageButton
             android:id="@+id/widget_unlock"
             android:src="@drawable/lock"
-            android:background="@android:color/transparent"
+            android:background="#4C9000FF"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 </LinearLayout>
